Add css changes and begin building new picture function in app

--- a/main.css
+++ b/main.css
@@ -13,6 +13,8 @@ html, body {
   height: 100%;
   margin: 0;
   font-family: 'courier';
+  color: #657b83;
+  background: #073642;
 }
 
 .terminal {
